--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,8 @@
 <div style="text-align:center">
-  <h1>
-    {{title}}
-  </h1>
-  <!-- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav">
-        <li class="active">
-          <a routerLink="create" routerLinkActive="active">
-            Add coins
-          </a>
-        </li>    
-      </ul>
-    </div>
-  </nav> -->
-  
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
+  <nav>
+      <a routerLink="/">Home</a>
+      <a routerLink="/login">Login</a>
+      <a routerLink="/details" >Details</a>      
+  </nav>     
 </div>
+<router-outlet></router-outlet>
