--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary" style="text-align:center">
   <div class="panel-heading">
     {{ title }}
   </div>
