added home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div style="text-align:center">
-  <nav>
-      <a routerLink="/">Home</a>
-      <a routerLink="/login">Login</a>
-      <a routerLink="/details" >Details</a>      
-  </nav>     
+<div style="text-align:center;">
+    <nav>
+        <a routerLink="/home">Home</a>
+        <a routerLink="/login">Login</a>
+        <a routerLink="/details" >Details</a>      
+    </nav>     
 </div>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
