created common function to validate.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
               <div class="form-group">
                   <label class="col-md-4">Id</label>                  
                   <ng-template #tipContent><div class="tooltip-inner" *ngFor="let error of validationResult.IdentifierStartsWith('Id')">{{error.Message}}</div></ng-template>
-                  <input type="text" id="Id" class="form-control" name="Id" [(ngModel)]="loginUser.Id" (ngModelChange)="validate($event)" [ngbTooltip]="tipContent" #t="ngbTooltip" placeholder="Id" />                  
+                  <input type="text" id="Id" class="form-control" name="Id" [(ngModel)]="loginUser.Id" (ngModelChange)="validate()" [ngbTooltip]="tipContent" #t="ngbTooltip" placeholder="Id" />                  
               </div>
           </td>
         </tr>
@@ -19,7 +19,7 @@
               <div class="form-group">
                   <label class="col-md-4">Password</label>
                   <ng-template #tipContent1><div class="tooltip-inner" *ngFor="let error of validationResult.IdentifierStartsWith('Pwd')" >{{error.Message}}</div></ng-template>
-                  <input type="text" id="Pwd" class="form-control" name="Pwd" [(ngModel)]="loginUser.Pwd" (ngModelChange)="validate($event)" [ngbTooltip]="tipContent1" #t1="ngbTooltip" placeholder="Password" />                                    
+                  <input type="text" id="Pwd" class="form-control" name="Pwd" [(ngModel)]="loginUser.Pwd" (ngModelChange)="validate()" [ngbTooltip]="tipContent1" #t1="ngbTooltip" placeholder="Password" />                                    
               </div>
           </td>
         </tr>
