--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <nav>
         <a routerLink="/home">Home</a>
         <a routerLink="/login">Login</a>
+        <a routerLink="/register">Register</a>
         <a routerLink="/details" >Details</a>      
     </nav>     
 </div>
