added more details.

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,8 +1,10 @@
 <div>
+    <b>The purpose of the app is to demo the ts.validator TypeScript based generic validation framework.</b>
+    <br/><br/>
     <ul>
         <li>There is a validation service in the app.</li>
         <li>This service uses the ts.validator framework for model validations.</li>
-        <li>This service is injected into the Login component.</li>
+        <li>This service is injected into the Login and Register components.</li>
         <li>The validation result is displayed in tooltips.</li>
     </ul>  
 </div>
