--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
                                         Welcome to ts.validator!!
                                     </h1>
                                 </td>
-                                <td>
+                                <td style="text-align: right">
                                     <ul class="nav navbar-nav">
                                     <li><a routerLink="/home">Home</a></li>
                                     <li><a routerLink="/login">Login</a></li>
