added copyright to details component.

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -8,3 +8,6 @@
         <li>The validation result is displayed in tooltips.</li>
     </ul>  
 </div>
+<div>
+        <p>&copy; 2018 Veritas Software, Australia<p>
+</div>
